<resources>
    <string name="app_name">TimeTable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">task title</string>
    <string name="save_task">Save Task</string>
    <string name="date">date</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
</resources>